# crane_x7_stamp

./: CMakeLists.txt  LICENSE  README.md  mock_pick_and_move_tf.launch.py  package.xml  press_the_stamp.cpp  test.md
launch/: camera_press_the_stamp.launch.py  mock_pick_and_move_tf.launch.py  mock_press_the_stamp_tf.launch.py  open_close_hand.launch.py  pick_and_move.launch.py  press_the_stamp.launch.py
src/: color_detection.cpp  fixed_position_publisher.cpp  open_close_hand.cpp  pick_and_move.cpp  pick_and_move_tf.cpp  press_the_stamp.cpp  press_the_stamp_tf.cpp
